kubernetes/apps/auth/pocket-id-operator/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pocket-id-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: o11y
      ports:
        - port: 8080
          protocol: TCP
